--- a/WebContent/css/estilo.css
+++ b/WebContent/css/estilo.css
@@ -1,5 +1,37 @@
 @CHARSET "ISO-8859-1";
-ul { list-style:none;
+/* RESETEAMOS LAS ETIQUETAS *//* RESETEAMOS LAS ETIQUETAS */
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video
+{
+    border:0;
+    font-size:100%;
+    vertical-align:baseline;
+    margin:0;
+    padding:0
+}
+.agrupado{
+    
+    padding:5px;
+    background-color:#F3F8FC;
+    border:1px solid #666;
+     
+      margin:10px;
+    -moz-border-radius: 20px;
+    -khtml-border-radius: 20px;
+    -webkit-border-radius:20px;
+    
+}
+input{
+    margin-left:10px;
+    -moz-border-radius: 5px;
+    -khtml-border-radius: 5x;
+    -webkit-border-radius:5px;
+    
+}
+
+
+
+
+  ul{ list-style:none;
   }
   li{
     display:inline;
@@ -10,6 +42,7 @@ ul { list-style:none;
  input{
     color:green;
     text-decoration: none;
+    text-transform: uppercase;
  }
  .botones{
        background-color:#0055F9;
@@ -57,4 +90,10 @@ ul { list-style:none;
       padding:5px;
       margin-left:20px;
       
+    }
+    .error{
+        margin-left:10px;
+       font-family: Tahoma, Sans;
+      font-size:60%;
+      color:red;
     }
